Prepare bootstrap for AMP project

--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "css-prefix-docs": "postcss --config build/ --no-map --replace docs/assets/css/docs.min.css",
     "css-minify": "cleancss --level 1 --source-map --output dist/css/bootstrap.min.css dist/css/bootstrap.css && cleancss --level 1 --source-map --output dist/css/bootstrap-grid.min.css dist/css/bootstrap-grid.css && cleancss --level 1 --source-map --output dist/css/bootstrap-reboot.min.css dist/css/bootstrap-reboot.css",
     "css-minify-docs": "cleancss --level 1 --source-map --output docs/assets/css/docs.min.css docs/assets/css/docs.min.css",
+    "amp-css": "npm-run-all amp-css-lint amp-css-compile css-prefix amp-css-clean-important amp-css-minify",
+    "amp-css-lint": "bundle exec scss-lint --config scss/.scss-lint.yml scss/*.scss",
+    "amp-css-compile": "node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap-amp.scss dist/css/bootstrap-amp.css",
+    "amp-css-clean-important": "sed -i -e 's/!important//g' dist/css/bootstrap-amp.css",
+    "amp-css-minify": "cleancss --level 1 --source-map --output dist/css/bootstrap-amp.min.css dist/css/bootstrap-amp.css",
     "js": "npm-run-all js-compile js-minify",
     "js-docs": "npm-run-all js-lint-docs js-minify-docs",
     "js-lint": "eslint js/ && eslint --config js/tests/.eslintrc.json --env node build/ Gruntfile.js",
@@ -81,6 +86,7 @@
     "babel-preset-es2015": "^7.0.0-alpha.7",
     "clean-css-cli": "^4.0.12",
     "eslint": "^3.19.0",
+    "grunt": "^1.0.1",
     "htmlhint": "^0.9.13",
     "htmllint-cli": "^0.0.6",
     "node-sass": "^4.5.2",
